--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Banking-Management-System
+spring.datasource.url=jdbc:mysql://localhost:3306/bms?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=12345
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#Hibernate auto ddl //we will use this to drop existing table after creation or create tables
+spring.jpa.hibernate.ddl-auto=create
+
+#logging to see hibernate intended queries
+logging.level.org.hibernate.SQL=DEBUG
+
