--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bms?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=12345
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #Hibernate auto ddl //we will use this to drop existing table after creation or create tables
 spring.jpa.hibernate.ddl-auto=create
